--- a/templates/base.html
+++ b/templates/base.html
@@ -112,8 +112,13 @@
                 </div>
             </div>
         </div>
+        
         <div class="copyright">
-            <p>&copy; 2026 PawParadise Centro Veterinário. CRMV-SP 00000.</p>
+            <p>
+                &copy; 2026 PawParadise Centro Veterinário. CRMV-SP 00000. 
+                <span style="opacity: 0.5; margin: 0 5px;">|</span> 
+                Desenvolvido por <a href="https://dimen-6.vercel.app/" target="_blank" style="color: var(--primary); text-decoration: none; font-weight: 600; transition: color 0.3s;">Dimen6</a>
+            </p>
         </div>
     </footer>
 
