--- a/templates/base.html
+++ b/templates/base.html
@@ -100,7 +100,7 @@
                 <ul class="footer-links">
                     <li><a href="{{ url_for('servicos') }}">Especialidades Médicas</a></li>
                     <li><a href="{{ url_for('servicos') }}#hotel">Hotel & Daycare</a></li>
-                    <li><a href="{{ url_for('contato') }}">Trabalhe Conosco</a></li>
+                    <li><a href="{{ url_for('contato') }}">Fale com a gente</a></li>
                     <li><a href="{{ url_for('contato') }}">Política de Privacidade</a></li>
                 </ul>
             </div>
